feat: add hover effect to buttons

--- a/pulse/src/sass/blocks/_buttons.scss
+++ b/pulse/src/sass/blocks/_buttons.scss
@@ -8,6 +8,10 @@
     font-size: 12px;
     font-weight: 500;
     text-transform: uppercase;
+    &:hover {
+        box-shadow: -2px -2px 50px $main-color;
+        border: none;
+    }
     &_main {
         margin-top: 67px;
         width: 300px;
