--- a/pulse/src/sass/style.scss
+++ b/pulse/src/sass/style.scss
@@ -1,3 +1,7 @@
+@import 'libs/bootstrap-reboot.min'; //must be 1ST
+@import 'libs/font'; //must be 2ns
+@import 'libs/slick';//must be 3td
+@import 'libs/animate'; //must be 4th
 @import 'base/variables';
 @import 'base/animations';
 * {
@@ -13,7 +17,7 @@
 @import 'blocks/advantages';
 @import 'blocks/titles';
 @import 'blocks/consultation';
-@import 'blocks/forms';
+@import 'blocks/forms'; 
 @import 'blocks/carousel';
 @import 'blocks/catalog';
 @import 'blocks/feed';
