feat: update responsive designs with media queries (320)

--- a/pulse/src/sass/blocks/_catalog.scss
+++ b/pulse/src/sass/blocks/_catalog.scss
@@ -118,17 +118,17 @@
             transition: 0.5s all;
             &_active {
                 transform: translateX(0%);
-                margin-right: 20px;
+                margin-right: 20px; // width: calc(200% + 40px);
             }
         }
         &__list {
             position: relative;
             width: 50%;
-            margin-left: 20px;
+            margin-left: 20px;//width: calc(200% + 40px);
             transform: translateX(0%);
             padding-right: 20px;
             transition: 0.5s all;
-            padding-left: 19px;
+            padding-left: 19px;//translateX(calc(-50% - 19px));
             margin-bottom: 0;
             list-style-type: none;
             &_active {
