--- a/pulse/src/sass/blocks/_media.scss
+++ b/pulse/src/sass/blocks/_media.scss
@@ -161,6 +161,7 @@
 
 @media (max-width: 480px) {
 	.container {
+		padding: 0 5px;
 		max-width: 450px;
 		margin: 0 auto;
 	}
@@ -257,6 +258,13 @@
 			width: 267px;
 		}
 	}
+	.catalog {
+		&-item {
+			&__price {
+				font-size: 18px;
+			}
+		}
+	}
 	.feed {
 		padding-bottom: 20px;
 
@@ -346,6 +354,13 @@
 		}
 		&__item{
 			margin-top: 30px;
+		}
+	}
+	.catalog {
+		&-item {
+			&__price {
+				font-size: 18px;
+			}
 		}
 	}
 	
